--- a/css/style.css
+++ b/css/style.css
@@ -3,30 +3,50 @@
     margin: 0;
 }
 
-/*================ HEADER ================*/
-
-header{
-    background-color: #ffffff;
-    padding: 15px 0;
-}
 [class*="__container"]{
     max-width: 1064px;
     margin: auto;
     padding: 0 15px;
 }
+body._lock {
+    overflow: hidden; /*убрал скрол страницы*/
+}
+/*================ HEADER ================*/
+
+header{
+    background-color: #ffffff;
+    /*padding: 10px 0;*/
+    /*position: fixed;*/
+    /*top: 0;*/
+    /*left: 0;*/
+    /*z-index: 10;*/
+
+}
 .header__container{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    /*min-height: 70px;*/
+    height: 56px;
+}
+.menu__list{
+    display: flex;
+    column-gap: 28px;
+    list-style: none;
 }
 header .header__logo{
     position: absolute;
-    left: 50%;
-    top: 22px;
+    left: 47%;
+    top: 17px;
     margin-left: -10px;
     z-index: 99;
+    display: block;
 }
-.link{
+.header__logo img {
+    max-width: 50%;
+    height: auto;
+}
+.menu__link{
     color: #1C1B1B;
     font-family: Roboto;
     font-size: 16px;
@@ -36,24 +56,37 @@ header .header__logo{
     text-decoration: none;
     margin-right: 28px;
 }
-.icon_container{
+.menu__link:last-child{
+    margin-right: 0;
+}
+.menu__link:hover{
+
+    color: #F94C43;
+}
+.menu__icon{
     display: flex;
     column-gap: 25px;
     align-items: center;
     list-style: none;
 
 }
+.menu__btm{
+    display: none;
+}
 
 /*================ MAIN SECTION ================*/
 
 .main {
-    padding-top: 9px;
-    padding-bottom: 24px;
     background: #F0EFEB;
+
 }
 .main__container{
     display: flex;
-    /*max-width: 1108px;*/
+    justify-content: space-between;
+    align-items: center;
+}
+.main__text{
+    padding: 90px 0;
 }
 .main__text h1{
     color: #000;
@@ -63,7 +96,7 @@ header .header__logo{
     font-weight: 700;
     line-height: normal;
     padding-bottom: 42px;
-    padding-top: 90px;
+    /*padding-top: 90px;*/
 }
 .main__text p{
     color: #000;
@@ -85,4 +118,498 @@ header .header__logo{
     border: 1px solid #000;
     background: #000;
     padding: 7px 23px 9px 23px;
+    text-decoration: none;
+    transition: background-color 0.3s ease 0s;
+    cursor: pointer;
+}
+.main__text a:hover {
+    background: transparent;
+    color: black;
+    box-shadow: inset 0 0 0 1px #ffffff;
+
+}
+.main__img{
+    /*max-width: 599px;*/
+    /*padding-top: 40px;*/
+}
+.main__img img{
+    max-width: 100%;
+    display: block;
+    /*position: relative;*/
+    /*left: 100px;*/
+}
+
+/*================ SELLERS SECTION ================*/
+.sellers{
+    padding: 60px 0 189px 0;
+    background: #FFF;
+}
+.sellers .guide__container h2{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 26px;
+}
+.guide__container_text{
+    max-width: 632px;
+}
+.sellers .guide__container p{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    /*max-width: 632px;*/
+    margin-bottom: 47px;
+}
+.guide__container {
+    margin-bottom: 87px;
+    text-align: center;
+}
+.sellers h2{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 52px;
+}
+.sellers__container{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 51px;
+}
+.thalby_guide{
+    text-align: center;
+    max-width: 314px;
+}
+.thalby_guide img{
+    max-width: 100%;
+    display: block;
+    margin-bottom: 27px;
+}
+.thalby_guide h4{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 17px;
+    /*max-width: 156px;*/
+}
+.thalby_guide p{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 10px;
+}
+.thalby_guide a{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+/*================ CAROUSEL ================*/
+/*.owl-stage{*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
+/*.owl-item{*/
+/*    text-align: center;*/
+/*}*/
+
+.sellers__container{
+    padding: 0;
+}
+/*================ DESCRIPTION SECTION ================*/
+
+.society{
+    padding: 76px 0 51px 0;
+    background: rgba(204, 204, 204, 0.30);
+}
+.description__container{
+    display: flex;
+}
+.img_block{
+    max-width: 385px;
+    margin-right: 50px;
+}
+.img_block img{
+    max-width: 100%;
+    display: block;
+}
+.text_block{
+    max-width: 530px;
+    text-align: left;
+    padding-top: 63px;
+}
+.text_block h3{
+    color: #000;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 31px;
+}
+.text_block p{
+    color: #000;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 40px;
+}
+.text_block a{
+    color: #000;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+.culture{
+    background: rgba(204, 204, 204, 0.60);
+}
+.culture .img_block{
+    margin-right: 0;
+    margin-left: 50px;
+}
+.culture .text_block{
+    text-align: right;
+}
+
+/*================ POINTS SECTION ================*/
+
+.points{
+    padding: 190px 0 51px 0;
+    background: #FFFFFF;
+}
+.points__container{
+    text-align: center;
+}
+.points__container h3{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 69px;
+    text-shadow: 0px 3px 2px #c9c9c9;
+}
+.points__flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: center;
+    padding-bottom: 111px;
+    gap: 111px 0;
+}
+.points .pointer{
+    width: 33%;
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 30px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-shadow: 0px 3px 2px #c9c9c9;
+
+}
+.points .pointer:before{
+    content: "";
+    display: block;
+    margin: auto;
+    width: 70px;
+    height: 70px;
+    border-radius: 50%;
+    background: #21F7EC;
+    margin-bottom: 26px;
+}
+.points .pointer:nth-child(2):before{
+    background: #33D3BC;
+}
+.points .pointer:nth-child(3):before{
+    background: #18A5C6;
+}
+.points .pointer:nth-child(4):before{
+    background: #D38F62;
+}
+.points .pointer:nth-child(5):before{
+    background: #F94C43;
+}
+.points .pointer:nth-child(6):before{
+    background: #D399FF;
+}
+
+/*================ INTERVIEWS SECTION ================*/
+.interviews{
+    background: linear-gradient(to bottom, #fff 50%, rgba(204, 204, 204, 0.3019607843) 50%);
+    padding: 51px 0 51px 0;
+}
+.interviews__container{
+    text-align: center;
+}
+.interviews__container h3{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 102px;
+    text-shadow: 0px 3px 2px #c9c9c9;
+}
+.interviews__items{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+}
+.interviews__item img{
+    max-width: 100%;
+    display: block;
+    margin-bottom: 35px;
+}
+.interviews__item h4{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    letter-spacing: 0.6px;
+    margin-bottom: 40px;
+}
+.interviews__item p{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 44px;
+}
+.interviews__item a{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    text-decoration-line: underline;
+}
+
+/*================ FORM SECTION ================*/
+
+
+.keep{
+    background: #FFF;
+    padding: 79px 0 88px 0;
+}
+.keep__container{
+    text-align: center;
+
+}
+.keep__container h3{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 36px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 9px;
+    text-shadow: 0px 3px 2px #c9c9c9;
+}
+.keep__container p{
+    color: #000;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;
+    margin-bottom: 26px;
+    text-shadow: 0px 3px 2px #c9c9c9;
+}
+.keep__form{
+    max-width: 366px;
+    margin: auto;
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    /*justify-content: space-between;*/
+    /*text-align: center;*/
+}
+.keep__form label{
+    display: none;
+}
+.keep__form input::placeholder{
+    color: #A0A0A0;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+.keep__input_name{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 18px;
+}
+.keep__input_name input{
+    border: 1px solid #000;
+    padding: 0 5px;
+    width: 153px;
+    height: 39px;
+}
+.keep__input_email{
+    margin-bottom: 16px;
+}
+.keep__input_email input{
+    width: 356px;
+    height: 39px;
+    flex-shrink: 0;
+    border: 1px solid #000;
+    padding: 0 5px;
+}
+.keep__button button{
+    border-radius: 100px;
+    border: 1px solid #000;
+    background: #000;
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 7px 23px 9px 23px;
+}
+
+/*================ FOOTER SECTION ================*/
+
+footer{
+    background: #020202;
+}
+.footer__container{
+    padding: 51px 5px 16px 15px;
+}
+.footer__info{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.footer__logo{
+    max-width: 129px;
+    height: 41px;
+}
+.footer__logo imd{
+    max-width: 100%;
+    display: block;
+}
+.footer__social{
+    display: flex;
+    gap: 20px;
+    list-style: none;
+}
+.footer__about{
+    display: flex;
+    justify-content: space-between;
+}
+.footer__about_list{
+    list-style: none;
+}
+.footer__about_list a{
+    text-decoration: none;
+    color: inherit;
+}
+.footer__about_list li{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px; /* 150% */
+    margin-bottom: 12px;
+    margin-right: 72px;
+}
+.footer__about_list li:nth-child(1){
+    margin-bottom: 36px;
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23.1px; /* 165% */
+}
+.footer__about_list li:last-of-type{
+    margin-bottom: 20px;
+}
+.footer__about_contact{
+    list-style: none;
+}
+.footer__about_contact a{
+    text-decoration: none;
+    color: inherit;
+}
+.footer__about_contact li{
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 21px; /* 150% */
+    margin-bottom: 12px;
+    margin-right: 72px;
+}
+.footer__about_contact li:nth-child(1){
+    margin-bottom: 36px;
+    color: #FFF;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23.1px; /* 165% */
+}
+.footer__year{
+    text-align: center;
+}
+.footer__year p{
+    color: #FFF;
+    text-align: center;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 23.1px; /* 165% */
 }
