--- a/css/style_preproc.css
+++ b/css/style_preproc.css
@@ -17,43 +17,27 @@ body._lock {
 
 /*================ HEADER ================*/
 header {
-  background-color: #fff;
-  /* padding: 10px 0; */
-  /* position: fixed; */
-  /* top: 0; */
-  /* left: 0; */
-  /* z-index: 10; */
+  background-color: #ffffff;
+  /*padding: 10px 0;*/
+  /*position: fixed;*/
+  /*top: 0;*/
+  /*left: 0;*/
+  /*z-index: 10;*/
 }
-
-.header__container {
+header .header__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* min-height: 70px; */
+  /*min-height: 70px;*/
   height: 56px;
 }
-
-.menu__list {
+header .header__container .menu__body .menu__list {
   display: flex;
   column-gap: 28px;
   list-style: none;
 }
-
-header .header__logo {
-  position: absolute;
-  left: 47%;
-  top: 17px;
-  margin-left: -10px;
-  z-index: 99;
-  display: block;
-}
-header .header__logo img {
-  max-width: 50%;
-  height: auto;
-}
-
-.menu__link {
-  color: #1c1b1b;
+header .header__container .menu__body .menu__list li a.menu__link {
+  color: #1C1B1B;
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-style: normal;
@@ -62,26 +46,35 @@ header .header__logo img {
   text-decoration: none;
   margin-right: 28px;
 }
-.menu__link:last-child {
+header .header__container .menu__body .menu__list li a.menu__link:last-child {
   margin-right: 0;
 }
-.menu__link:hover {
-  color: #f94c43;
+header .header__container .menu__body .menu__list li a.menu__link:hover {
+  color: #F94C43;
 }
-
-.menu__icon {
+header .header__container .header__logo {
+  position: absolute;
+  left: 47%;
+  top: 17px;
+  margin-left: -10px;
+  z-index: 99;
+  display: block;
+}
+header .header__container .header__logo img {
+  max-width: 50%;
+  height: auto;
+}
+header .header__container .menu__icon {
   display: flex;
   column-gap: 25px;
   align-items: center;
   list-style: none;
 }
-
-.menu__btm {
+header .header__container .menu__btm {
   display: none;
 }
-
 @media (max-width: 835px) {
-  .menu__btm {
+  header .header__container .menu__btm {
     z-index: 5;
     display: block;
     position: relative;
@@ -89,7 +82,7 @@ header .header__logo img {
     height: 18px;
     cursor: pointer;
   }
-  .menu__btm span, .menu__btm::before, .menu__btm::after {
+  header .header__container .menu__btm span, header .header__container .menu__btm::before, header .header__container .menu__btm::after {
     left: 0;
     position: absolute;
     height: 10%;
@@ -97,59 +90,59 @@ header .header__logo img {
     transition: all 0.3s ease 0s;
     background-color: black;
   }
-  .menu__btm::before, .menu__btm::after {
+  header .header__container .menu__btm::before, header .header__container .menu__btm::after {
     content: "";
   }
-  .menu__btm::before {
+  header .header__container .menu__btm::before {
     top: 0;
   }
-  .menu__btm::after {
+  header .header__container .menu__btm::after {
     bottom: 0;
   }
-  .menu__btm span {
+  header .header__container .menu__btm span {
     top: 50%;
     transform: scale(1) translate(0px, -50%);
   }
-  .menu__btm._active span {
+  header .header__container .menu__btm._active span {
     transform: scale(0);
   }
-  .menu__btm._active::before {
+  header .header__container .menu__btm._active::before {
     top: 50%;
     transform: rotate(-45deg) translate(0px, -50%);
   }
-  .menu__btm._active::after {
+  header .header__container .menu__btm._active::after {
     top: 50%;
     transform: rotate(45deg) translate(0px, -50%);
   }
-  .menu__body {
+  header .header__container .menu__body {
     position: fixed;
     top: 0;
     left: -130%;
     width: 100%;
     height: 100%;
-    background-color: #f0f0f0;
+    background-color: #F0F0F0;
     padding: 150px 30px 30px 0;
     transition: left 0.3s ease 0s;
     overflow: auto;
   }
-  .menu__body._active {
+  header .header__container .menu__body._active {
     left: 0;
   }
-  .menu__list {
+  header .header__container .menu__body .menu__list {
     flex-direction: column;
     text-align: center;
     justify-content: center;
   }
-  .menu__list li {
+  header .header__container .menu__body .menu__list li {
     margin: 0 0 30px 0;
   }
-  .menu__list li:last-child {
+  header .header__container .menu__body .menu__list li:last-child {
     margin-bottom: 0;
   }
-  .menu__list .menu__link {
+  header .header__container .menu__body .menu__list li a.menu__link {
     font-size: 26px;
   }
-  .menu__icon._active {
+  header .header__container .menu__icon._active {
     position: absolute;
     bottom: 20px;
     left: 41%;
@@ -157,64 +150,55 @@ header .header__logo img {
 }
 @media (max-width: 655px) {
   header .header__container .menu__icon._active {
+    position: absolute;
+    bottom: 20px;
     left: 39%;
   }
 }
 @media (max-width: 570px) {
   header .header__container .menu__icon._active {
+    position: absolute;
+    bottom: 20px;
     left: 40%;
+  }
+  header .header__container .menu__icon {
     column-gap: 10px;
   }
 }
 @media (max-width: 428px) {
   header .header__container .menu__icon._active {
+    position: absolute;
+    bottom: 20px;
     left: 40%;
+  }
+  header .header__container .menu__icon {
     column-gap: 0;
   }
-  header .header__logo {
+  header .header__container .header__logo {
     left: 40%;
   }
 }
 @media (max-width: 320px) {
-  header .header__container .menu__icon {
+  header .header__container .menu__icon._active {
+    position: absolute;
+    bottom: 20px;
     left: 35%;
   }
 }
-@media (max-width: 655px) {
-  header .header__container .menu__icon {
-    left: 39%;
-  }
-}
-@media (max-width: 570px) {
-  header .header__container .menu__icon {
-    left: 40%;
-    column-gap: 10px;
-  }
-}
-@media (max-width: 428px) {
-  header .header__container .menu__icon {
-    left: 40%;
-    column-gap: 0;
-  }
-}
-@media (max-width: 320px) {
-  header .header__container .menu__icon {
-    left: 35%;
-  }
-}
+
 /*================ MAIN SECTION ================*/
 .main {
   background: #F0EFEB;
 }
-.main__container {
+.main .main__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-.main__text {
+.main .main__container .main__text {
   padding: 90px 0;
 }
-.main__text h1 {
+.main .main__container .main__text h1 {
   color: #000;
   font-family: "Roboto", sans-serif;
   font-size: 60px;
@@ -223,7 +207,7 @@ header .header__logo img {
   line-height: normal;
   padding-bottom: 42px;
 }
-.main__text p {
+.main .main__container .main__text p {
   color: #000;
   font-family: "Roboto", sans-serif;
   font-size: 24px;
@@ -232,8 +216,8 @@ header .header__logo img {
   line-height: normal;
   padding-bottom: 26px;
 }
-.main__text a {
-  color: #fff;
+.main .main__container .main__text a {
+  color: #FFF;
   font-family: "Roboto", sans-serif;
   font-size: 17px;
   font-style: normal;
@@ -247,39 +231,33 @@ header .header__logo img {
   transition: background-color 0.3s ease 0s;
   cursor: pointer;
 }
-.main__text a:hover {
+.main .main__container .main__text a:hover {
   background: transparent;
   color: black;
-  box-shadow: inset 0 0 0 1px #fff;
+  box-shadow: inset 0 0 0 1px #ffffff;
 }
-.main__img {
-  /*max-width: 599px;*/
-  /*padding-top: 40px;*/
-}
-.main__img img {
+.main .main__container .main__img img {
   max-width: 100%;
   display: block;
-  /*position: relative;*/
-  /*left: 100px;*/
 }
 @media (max-width: 869px) {
-  .main__container {
+  .main .main__container {
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 }
 @media (max-width: 519px) {
-  .main__text {
+  .main .main__container .main__text {
     padding: 60px 0;
   }
-  .main__text h1 {
+  .main .main__container .main__text h1 {
     font-size: 48px;
   }
-  .main__text p {
+  .main .main__container .main__text p {
     font-size: 20px;
   }
-  .main__img img {
+  .main .main__container .main__img img {
     max-width: 90%;
   }
 }
@@ -287,51 +265,52 @@ header .header__logo img {
 /*================ SELLERS SECTION ================*/
 .sellers {
   padding: 60px 0 189px 0;
-  background: #fff;
+  background: #FFF;
 }
 .sellers .guide__container {
   margin-bottom: 87px;
   text-align: center;
-  padding-left: 0;
-  padding-right: 0;
 }
 .sellers .guide__container h2 {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 36px;
+  font-style: normal;
   font-weight: 700;
   line-height: normal;
   margin-bottom: 26px;
-  text-align: center;
 }
 .sellers .guide__container .guide__container_text {
   max-width: 632px;
 }
 .sellers .guide__container .guide__container_text p {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 20px;
+  font-style: normal;
   font-weight: 400;
   line-height: normal;
-  text-align: center;
+  /*max-width: 632px;*/
   margin-bottom: 47px;
 }
 .sellers h2 {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 36px;
+  font-style: normal;
   font-weight: 700;
   line-height: normal;
   margin-bottom: 52px;
-  text-align: center;
 }
 .sellers .sellers__container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding-bottom: 51px;
-  padding-right: 0;
-  padding-left: 0;
+  /*================ CAROUSEL ================*/
 }
 .sellers .sellers__container .thalby_guide {
   text-align: center;
@@ -344,53 +323,63 @@ header .header__logo img {
 }
 .sellers .sellers__container .thalby_guide h4 {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 17px;
+  font-style: normal;
   font-weight: 700;
   line-height: normal;
   margin-bottom: 17px;
+  /*max-width: 156px;*/
 }
 .sellers .sellers__container .thalby_guide p {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 17px;
+  font-style: normal;
   font-weight: 400;
   line-height: normal;
   margin-bottom: 10px;
 }
 .sellers .sellers__container .thalby_guide a {
   color: #000;
+  text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 17px;
+  font-style: normal;
   font-weight: 700;
   line-height: normal;
   text-decoration-line: underline;
 }
-
-/*================ CAROUSEL ================*/
-.owl-item {
+.sellers .sellers__container .owl-stage-outer .owl-stage .owl-item {
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
+.sellers .sellers__container {
+  padding: 0;
+}
 @media (max-width: 519px) {
   .sellers {
     padding: 60px 0 60px 0;
   }
+}
+@media (max-width: 519px) {
+  .sellers .guide__container {
+    margin-bottom: 60px;
+  }
   .sellers .guide__container h2 {
     font-size: 30px;
   }
-  .sellers .guide__container p {
+  .sellers .guide__container .guide__container_text p {
     font-size: 18px;
-  }
-  .sellers__container {
-    padding: 0;
   }
   .sellers h2 {
     font-size: 30px;
   }
 }
+
 /*================ DESCRIPTION SECTION ================*/
 .society {
   padding: 76px 0 51px 0;
@@ -676,7 +665,7 @@ header .header__logo img {
     justify-content: center;
     align-items: center;
   }
-  .interviews .interviews__items .interviews__item img {
+  .interviews .interviews__items img {
     margin-top: 20px;
     margin-bottom: 20px;
   }
@@ -810,148 +799,152 @@ header .header__logo img {
   }
 }
 @media (max-width: 330px) {
-  .keep .keep__container .keep__form .keep__input_email input {
-    max-width: 289px;
-  }
   .keep .keep__container {
     padding: 0 5px;
+  }
+  .keep .keep__container .keep__form .keep__input_email input {
+    max-width: 289px;
   }
 }
 /*================ FOOTER SECTION ================*/
 footer {
   background: #020202;
 }
-
-.footer__container {
+footer .footer__container {
   padding: 51px 5px 16px 15px;
 }
-
-.footer__info {
+footer .footer__container .footer__info {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
-
-.footer__logo {
+footer .footer__container .footer__info .footer__ico .footer__logo {
   max-width: 129px;
-  padding-bottom: 20px;
+  height: 41px;
 }
-.footer__logo img {
+footer .footer__container .footer__info .footer__ico .footer__logo img {
   max-width: 100%;
   display: block;
 }
-
-.footer__social {
+footer .footer__container .footer__info .footer__ico .footer__social {
   display: flex;
   gap: 20px;
   list-style: none;
 }
-
-.footer__about {
+footer .footer__container .footer__info .footer__about {
   display: flex;
   justify-content: space-between;
 }
-
-.footer__about_list {
+footer .footer__container .footer__info .footer__about .footer__about_list {
   list-style: none;
 }
-.footer__about_list a {
+footer .footer__container .footer__info .footer__about .footer__about_list a {
   text-decoration: none;
   color: inherit;
 }
-.footer__about_list li {
-  color: #fff;
+footer .footer__container .footer__info .footer__about .footer__about_list li {
+  color: #FFF;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 21px; /* 150% */
+  line-height: 21px;
+  /* 150% */
   margin-bottom: 12px;
   margin-right: 72px;
 }
-.footer__about_list li:nth-child(1) {
+footer .footer__container .footer__info .footer__about .footer__about_list li:nth-child(1) {
   margin-bottom: 36px;
+  color: #FFF;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
-  line-height: 23.1px; /* 165% */
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.1px;
+  /* 165% */
 }
-.footer__about_list li:last-of-type {
+footer .footer__container .footer__info .footer__about .footer__about_list li:last-of-type {
   margin-bottom: 20px;
 }
-
-.footer__about_contact {
+footer .footer__container .footer__info .footer__about .footer__about_contact {
   list-style: none;
 }
-.footer__about_contact a {
+footer .footer__container .footer__info .footer__about .footer__about_contact a {
   text-decoration: none;
   color: inherit;
 }
-.footer__about_contact li {
-  color: #fff;
+footer .footer__container .footer__info .footer__about .footer__about_contact li {
+  color: #FFF;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 21px; /* 150% */
+  line-height: 21px;
+  /* 150% */
   margin-bottom: 12px;
   margin-right: 72px;
 }
-.footer__about_contact li:nth-child(1) {
+footer .footer__container .footer__info .footer__about .footer__about_contact li:nth-child(1) {
   margin-bottom: 36px;
+  color: #FFF;
+  font-family: "Roboto", sans-serif;
   font-size: 14px;
-  line-height: 23.1px; /* 165% */
+  font-style: normal;
+  font-weight: 400;
+  line-height: 23.1px;
+  /* 165% */
 }
-
-.footer__year {
+footer .footer__container .footer__year {
   text-align: center;
 }
-.footer__year p {
-  color: #fff;
+footer .footer__container .footer__year p {
+  color: #FFF;
   text-align: center;
   font-family: "Roboto", sans-serif;
   font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 23.1px; /* 165% */
+  line-height: 23.1px;
+  /* 165% */
 }
-
 @media (max-width: 551px) {
-  .footer__container {
+  footer .footer__container {
     padding: 40px 0 16px 5px;
   }
-  .footer__social {
+  footer .footer__container .footer__info .footer__ico .footer__social {
     gap: 10px;
   }
-  .footer__about_list li {
+  footer .footer__container .footer__info .footer__about .footer__about_list li {
     font-size: 12px;
     margin-right: 30px;
     margin-bottom: 10px;
   }
-  .footer__about_list li:nth-child(1) {
+  footer .footer__container .footer__info .footer__about .footer__about_list li:nth-child(1) {
     margin-bottom: 18px;
   }
-  .footer__about_contact li {
+  footer .footer__container .footer__info .footer__about .footer__about_contact li {
     font-size: 12px;
     margin-right: 30px;
     margin-bottom: 10px;
   }
-  .footer__about_contact li:nth-child(1) {
+  footer .footer__container .footer__info .footer__about .footer__about_contact li:nth-child(1) {
     margin-bottom: 18px;
   }
-  .footer__year p {
+  footer .footer__container .footer__year p {
     font-size: 12px;
   }
 }
 @media (max-width: 427px) {
-  .footer__social {
+  footer .footer__container .footer__info .footer__ico .footer__social {
     flex-direction: column;
     justify-content: center;
     padding-left: 10px;
   }
-  .footer__about_contact li {
-    margin-right: 10px;
-  }
-  .footer__logo img {
+  footer .footer__container .footer__info .footer__ico .footer__logo img {
     max-width: 80%;
+  }
+  footer .footer__container .footer__info .footer__about .footer__about_contact li {
+    margin-right: 10px;
   }
 }
 
